--- a/hello/app/index.html
+++ b/hello/app/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <script  src="scripts/html-imports.min.js"></script>
+    <script  src="scripts/template.js"></script>
+    <script  src="scripts/webcomponents-platform.js"></script>
+   
     <link rel="import" href="hello-element.html" >
 </head>
 <body>
