moved all polyfill references to index.html

--- a/hello/app/index.html
+++ b/hello/app/index.html
@@ -3,14 +3,16 @@
     <script  src="scripts/html-imports.min.js"></script>
     <script  src="scripts/template.js"></script>
     <script  src="scripts/webcomponents-platform.js"></script>
+    <script  src="scripts/webcomponents-bundle.js"></script>
+    <script  src="scripts/custom-elements-es5-adapter.js"></script>
    
-    <link rel="import" href="hello-element.html" >
+    <link rel="import" href="app-loader.html" >
 </head>
 <body>
 
- <hello-element>
+ <app-loader>
 
- </hello-element>
+ </app-loader>
 
 </body>
 </html>
