added grunt tasks

--- a/microfrontend/angular-microfrontend/hello-app/index.html
+++ b/microfrontend/angular-microfrontend/hello-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Hello App</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,5 +12,4 @@
 </head>
 <body>
   <app-root></app-root>
-</body>
-</html>
+<script type="text/javascript" src="hello-app.js"></script></html>
