--- a/microfrontend/host-app/index.html
+++ b/microfrontend/host-app/index.html
@@ -6,11 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/custom-elements-es5-adapter.js"></script>
-  
+    
 </head>
 <body>
-  <app-root></app-root>
+  <div id="app-container">
+
+  </div>
+  <link rel="import" href="http://localhost:9080/app.html" >
 </body>
 </html>
